--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,8 @@
             <version>5.10.0</version>
         </dependency>
 
+
+
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
 <!--            <artifactId>spring-boot-starter-web</artifactId>-->
@@ -192,6 +194,11 @@
             <groupId>com.google.api.graphql</groupId>
             <artifactId>rejoiner</artifactId>
             <version>0.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.future-converter</groupId>
+            <artifactId>future-converter-java8-guava</artifactId>
+            <version>1.2.0</version>
         </dependency>
 
         <!-- ######################### openbase deps ######################### -->
