--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,13 @@
             <artifactId>bco.dal.remote</artifactId>
             <version>2.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- ######################### bonjour auto discovery service ######################### -->
+        <dependency>
+            <groupId>org.jmdns</groupId>
+            <artifactId>jmdns</artifactId>
+            <version>3.5.6</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
