--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jetty</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webflux</artifactId>
+        </dependency>
+
 
         <!-- testing facilities -->
         <!--        <dependency>-->
