--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <skipTests>true</skipTests>
+        <skipTests>false</skipTests>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <dependency.jul.version>2.0-SNAPSHOT</dependency.jul.version>
