subscriptions now work somehow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,16 @@
 # <http://www.gnu.org/licenses/gpl-3.0.html>.
 # #L%
 ###
-
 server.port=13781
 spring.main.banner-mode=off
+
+graphql:
+    servlet:
+        mapping:/graphql/*
+        enabled:true
+        corsEnabled:true
+    subscriptions:
+        websocket:
+        path:/subscriptions
+#logging.level.root=TRACE
+#logging.level.com.baeldung=TRACE
