--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,11 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+        </dependency>
+
         <!-- use jetty as webserver-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -204,6 +209,10 @@
             <groupId>org.jmdns</groupId>
             <artifactId>jmdns</artifactId>
             <version>3.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
         </dependency>
     </dependencies>
 
