--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,13 @@
             <artifactId>jmdns</artifactId>
             <version>3.5.6</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
