--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
-                    <source>8</source>
+                    <source>${java.source.version}</source>
                 </configuration>
                 <executions>
                     <execution>
@@ -207,8 +207,8 @@
         <!-- only compile tests if needed -->
         <maven.test.skip>${skipTests}</maven.test.skip>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.source.version>8</java.source.version>
+        <java.target.version>8</java.target.version>
         <dependency.bco.version>2.0-SNAPSHOT</dependency.bco.version>
         <dependency.jul.version>${dependency.bco.version}</dependency.jul.version>
         <dependency.bco.registry.version>${dependency.bco.version}</dependency.bco.registry.version>
