--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>${java.source.version}</source>
+                    <target>${java.target.version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -129,7 +129,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
-                    <source>8</source>
+                    <source>${java.source.version}</source>
                 </configuration>
                 <executions>
                     <execution>
@@ -217,7 +217,8 @@
     </profiles>
 
     <properties>
-        <java.version>11</java.version>
+        <java.target.version>11</java.target.version>
+        <java.source.version>11</java.source.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <dependency.org.codehaus.mojo.license-maven-plugin.version>1.10</dependency.org.codehaus.mojo.license-maven-plugin.version>
         <kotlin.version>1.3.70</kotlin.version>
