--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,11 +24,12 @@ spring.main.banner-mode=off
 
 graphql:
     servlet:
-        mapping:/graphql/*
-        enabled:true
-        corsEnabled:true
-    subscriptions:
-        websocket:
-        path:/subscriptions
+        mapping: /graphql
+        enabled: true
+        corsEnabled: true
+        subscriptions:
+            websocket:
+            path: /subscriptions
+
 #logging.level.root=TRACE
 #logging.level.com.baeldung=TRACE
