--- a/test/pom.xml
+++ b/test/pom.xml
@@ -90,6 +90,7 @@
         <groupId>org.openbase</groupId>
         <artifactId>bco.dal.test</artifactId>
         <version>${dependency.bco.version}</version>
+        <scope>test</scope>
     </dependency>
 </dependencies>
 </project>
