commit dev certificate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,15 @@
 server.port=13781
 spring.main.banner-mode=off
 
+# SSL
+server.ssl.key-store=classpath:dev-keystore.p12
+server.ssl.key-store-password=WrCqBj8WV/eeXZIW
+
+# JKS or PKCS12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alaias=basecubeone
+
+
 graphql:
     servlet:
         mapping: /graphql
@@ -30,6 +39,8 @@ graphql:
         subscriptions:
             websocket:
             path: /subscriptions
+
+
 
 #logging.level.root=TRACE
 #logging.level.com.baeldung=TRACE
