--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,11 @@
     <licenses>
         <license>
             <name>LGPLv3</name>
-            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <url>https://www.gnu.org/licenses/lgpl.html</url>
         </license>
         <license>
             <name>GPLv3</name>
-            <url>http://www.gnu.org/licenses/gpl.html</url>
+            <url>https://www.gnu.org/licenses/gpl.html</url>
         </license>
     </licenses>
 
