--- a/template-registry/lib/pom.xml
+++ b/template-registry/lib/pom.xml
@@ -17,7 +17,7 @@
     <licenses>
         <license>
             <name>LGPLv3</name>
-            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <url>https://www.gnu.org/licenses/lgpl.html</url>
         </license>
     </licenses>
     
