--- a/util/pom.xml
+++ b/util/pom.xml
@@ -17,7 +17,7 @@
     <licenses>
         <license>
             <name>GPLv3</name>
-            <url>http://www.gnu.org/licenses/lgpl.html</url>
+            <url>https://www.gnu.org/licenses/lgpl.html</url>
         </license>
     </licenses>
 
