switch rct to release version

--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,7 @@
         <dependency.bco.version>2.0-SNAPSHOT</dependency.bco.version>
         <dependency.jul.version>2.0-SNAPSHOT</dependency.jul.version>
         <dependency.bco.authentication.version>${dependency.bco.version}</dependency.bco.authentication.version>
-        <dependency.rct.version>2.0-SNAPSHOT</dependency.rct.version>
+        <dependency.rct.version>[0.18,0.19-alpha)</dependency.rct.version>
         <dependency.apache-math.version>[3.6,3.7-alpha)</dependency.apache-math.version>
         <dependency.org.codehaus.mojo.license-maven-plugin.version>1.17</dependency.org.codehaus.mojo.license-maven-plugin.version>
         <dependency.org.junit.jupiter.version>[5.6,5.7-alpha)</dependency.org.junit.jupiter.version>
