--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -3,13 +3,11 @@ name: Build and Test
 on:
   push:
     branches:
-      - main
-    tags:
-      - "v*.*.*"
+      - dev
   pull_request:
     branches:
-      - "feature/**"
-      - "bugfix/**"
+      - dev
+      - beta
       - "epic/**"
     types: [opened, synchronize, reopened, ready_for_review]
 
