--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -65,7 +65,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: docker/Dockerfile.amd64 
+          file: docker/Dockerfile 
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.bco-meta.outputs.tags }}
@@ -100,7 +100,7 @@ jobs:
           context: ./docker/device-manager/openhab
           build-args: |
             BCO_BASE_IMAGE_VERSION=sha-${{ steps.short-sha.outputs.sha }}
-          file: ./docker/device-manager/openhab/Dockerfile.amd64
+          file: ./docker/device-manager/openhab/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.bco-device-meta.outputs.tags }}
