--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -76,7 +76,7 @@ ENV \
 
 # Basic build-time metadata as defined at http://label-schema.org
 LABEL org.label-schema.build-date=$BUILD_DATE \
-    org.label-schema.docker.dockerfile="/Dockerfile.amd64" \
+    org.label-schema.docker.dockerfile="docker/Dockerfile" \
     org.label-schema.license="GPL3" \
     org.label-schema.name="bco" \
     org.label-schema.vendor="openbase.org" \
@@ -85,7 +85,7 @@ LABEL org.label-schema.build-date=$BUILD_DATE \
     org.label-schema.url="https://www.basecubeone.org" \
     org.label-schema.vcs-ref=$VCS_REF \
     org.label-schema.vcs-type="Git" \
-    org.label-schema.vcs-url="https://github.com/openbase/bco.package.docker.git" \
+    org.label-schema.vcs-url="https://github.com/openbase/bco.git" \
     maintainer="Divine Threepwood <divine@openbase.org>"
 
     
