--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -11,11 +11,11 @@ on:
   pull_request:
     branches:
       - dev
-    types: [opened, synchronize, reopened, ready_for_review]
+    types: [opened, labeled, synchronize, reopened, ready_for_review]
 
 jobs:
   docker:
-    if: github.event.label.name == 'prebuild_docker_image'
+    if: contains(github.event.pull_request.labels.*.name, 'prebuild docker image')
     runs-on: ubuntu-latest
     steps:
       -
