make sure docker is always build for stable, beta, and dev.

--- a/.github/workflows/deploy-docker.yml
+++ b/.github/workflows/deploy-docker.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   docker:
-    if: contains(github.event.pull_request.labels.*.name, 'prebuild docker image')
+    if: ${{ github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'prebuild docker image') }}
     runs-on: ubuntu-latest
     steps:
       -
