remove rsb deps

--- a/module/registry/activity-registry/core/pom.xml
+++ b/module/registry/activity-registry/core/pom.xml
@@ -87,12 +87,11 @@
             <artifactId>bco.registry.template.remote</artifactId>
             <version>${project.version}</version>
         </dependency>
-
-        <dependency>
-            <groupId>org.openbase</groupId>
-            <artifactId>jul.extension.rsb.scope</artifactId>
-            <version>${dependency.jul.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.openbase</groupId>-->
+<!--            <artifactId>jul.extension.rsb.scope</artifactId>-->
+<!--            <version>${dependency.jul.version}</version>-->
+<!--        </dependency>-->
          <dependency>
             <groupId>org.openbase</groupId>
             <artifactId>jul.extension.type.processing</artifactId>
