--- a/module/dal/pom.xml
+++ b/module/dal/pom.xml
@@ -251,11 +251,11 @@
             <version>${dependency.org.junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.openbase</groupId>
-            <artifactId>jul.extension.rsb.scope</artifactId>
-            <version>${dependency.jul.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.openbase</groupId>-->
+<!--            <artifactId>jul.extension.rsb.scope</artifactId>-->
+<!--            <version>${dependency.jul.version}</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <distributionManagement>
